<resources>
    <string name="app_name">Competishun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Title -->
    <string name="instant_doubt_resolution">Instant Doubt Resolution</string>
    <string name="comprehensive_test_series">Comprehensive Test \nSeries</string>
    <string name="evaluate_your_performances">Evaluate Your \nPerformance</string>
    <string name="no_date_available">No date available</string>
    <!-- Description -->
    <string name="doubt_description">Got a tough question? Get quick answers from \nexperts and peers anytime, anywhere</string>
    <string name="test_description">Elevate your prep with realistic tests; practice and \nreceive detailed solutions and feedback.</string>
    <string name="evaluate_description">Monitor progress with detailed reports, track \nresults, and focus on improvement areas</string>
    <string name="let_s_get_started">Let’s Get Started with Your \nName!</string>
    <string name="full_name">Full Name</string>
    <string name="enter_here">Enter here</string>
    <string name="city">City</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="by_signing_up_you_agree_to_our_and">By signing up, you agree to our %1$s \nand %2$s</string>
    <string name="terms_conditions_clicked"><![CDATA[Terms & Conditions Clicked]]></string>
    <string name="privacy_policy_clicked">Privacy Policy Clicked</string>
    <string name="screenType">ScreenType</string>
    <string name="home">Home</string>
    <string name="submit">call\n\n</string>
    <string name="MentorDes">Over 22 years of experience in Mathematics education.</string>
    <string name="full_year_courses">Full - Year Courses</string>
    <string name="test_series">Test Series</string>
    <string name="revision_courses">Revision Courses</string>
    <string name="crash_courses">Crash Courses</string>
    <string name="distance_learning">Distance Learning</string>
    <string name="digital_book">Digital Book</string>
    <string name="why_choose_competishun">Why Choose Competishun?</string>
    <string name="testimonials">Testimonials</string>
    <string name="Error">#E25B53</string>
    <string name="verify_btn_default">#B5B3B3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //navigation drawer
    <string name="title_download">Downloads</string>
    <string name="title_bookmark">Bookmarks</string>
    <string name="title_aboutUs">About Us</string>
    <string name="title_iWish">Contact Us</string>
    <string name="title_termsCondition">Terms and Conditions</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="title_rate">Rate this App</string>
    <string name="privacy_policytext">Privacy Policy</string>
    <string name="dadada">#DADADA</string>
    <string name="_3e3ef7">#3E3EF7</string>
    <string name="title_News">News</string>
    <string name="title_Announcement">Announcements</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="thumbnail_desc">The topics covered typically include:
        <ul>Relations and Functions: Types of relations and functions, &amp; Inverse trigonometric functions.Relations and Functions: Types of relations and functions, &amp; Inverse trigonometric functions.</ul>
        <ul>This chapter covers important topics such as Cartesian products of sets, various types of relations, domain and range of relations, and different types of functions. These foundational concepts are essential for understanding advanced mathematical ideas</ul></string>

    <!--    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>-->
    <string name="note_txt">Download up to total <font color="#FF7A28">8 videos &amp; PDFs</font> at once! \nTo add more, just delete some of your previous \ndownloads. Happy learning!</string>

    <string name="download_success"><font color="#2B2829"><b>“Introduction to Basic Maths”</b></font> <font color="#726C6C"><b>is downloaded successfully</b></font></string>
    <string name="bookmark_success"><font color="#2B2829"><b>“Introduction to Basic Maths”</b></font> <font color="#726C6C"><b>is bookmarked successfully</b></font></string>
    <string name="phone_no">Phone No.</string>
    <string name="enter_no">Enter Your Number</string>
    <string name="client_id">887693153546-mv6cfeppj49al2c2bdpainrh6begq6bi.apps.googleusercontent.com</string>
    <string name="about_us_text"><![CDATA[
    Competishun is a well-known name in the field of IIT-JEE/NEET Online & Offline Coaching providing Pre-Engineering/Pre-Medical training to aspirants intending to prepare and appear in various competitive, talent search and scholarship examinations of National and International level such as JEE (Main + Advanced) formerly IIT-JEE (Indian Institute of Technology - Joint Entrance Examination). JEE (Main) (formerly AIEEE-All India Engineering Entrance Examination), NEET (National Eligibility cum Entrance Test), BITSAT (Birla Institute of Technology & Science Admission Test) etc.<br><br>

    <b>Mission:</b><br>
    1. To embrace the idea of inclusiveness along with academic excellence.<br>
    2. To achieve the aims and objectives, enhance success rate and provide utmost satisfaction to students/ their parents.<br>
    3. We are committed to instilling well-rounded academics rigour and imbuing the zeal for competition so that one’s course of action can lead one to reach the zenith of success meaningfully.<br><br>

    <b>Vision:</b><br>
    1. We aim to become one of the most admired brands in education section and help the young aspirants to make their dreams come true through quality teaching, technology enabled systems & commitment.<br>
    2. We aim towards Service and shall continue to utilize material and intellectual resources and evolve a social temperament in the name of service to the nation & humanity at large.
]]></string>
    <string name="course_not_exits">“%s” does not exist in the search. Search another keyword.</string>
    <string name="showing_results">Showing results (%s):</string>
    <string name="no_result">No Result Found!\n</string>
    <string name="email">Email</string>
    <string name="coming_soon">Coming Soon: New Tests!</string>
    <string name="new_text_Add">New tests are being added to our platform soon. Stay tuned and keep up the great work!</string>


    <string name="fill_all_fields">Please fill all fields.</string>
    <string name="pincode_limit">Pincode cannot be more than 6 digits.</string>
    <string name="char_limit_exceeded">Character limit exceeded. Maximum 100 characters allowed.</string>
    <string name="competishun_location">Competishun Tower-2, Plot number 35, Gopalpura Bypass Rd, near Riddhi Siddhi Circle, 10 B Scheme, Triveni Nagar, Gopal Pura Mode, Jaipur, Rajasthan 302020</string>
    <string name="my_scope_student_s_comprehensive_overview_of_performance_amp_evaluation"><![CDATA[My SCOPE: Student’s Comprehensive Overview of Performance & Evaluation]]></string>
    <string name="current_month_year">%1$s %2$d</string>
    <string name="Bookmark">Bookmark</string>
    <string name="Download">Download</string>
    <string name="tagline">
    <font color="#2B2829">Competishun Means</font>
    <font color="#FF7A28">केवल पढ़ाई</font>\n
    <font color="#2B2829">  Competishun Means </font>
    <font color="#FF7A28">Selection</font>
</string>
</resources>
